8193760: allow code in a constructor before the call to the super constructor

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -230,8 +230,12 @@ compiler.err.switch.expression.no.result.expressions=\
     switch expression does not have any result expressions
 
 # 0: name
-compiler.err.call.must.be.first.stmt.in.ctor=\
-    call to {0} must be first statement in constructor
+compiler.err.call.must.only.appear.in.ctor=\
+    calls to {0}() may only appear within constructors
+
+# 0: name
+compiler.err.call.may.not.appear.within.try=\
+    calls to {0}() may not appear within try statements
 
 # 0: symbol kind, 1: name, 2: list of type or message segment, 3: list of type or message segment, 4: symbol kind, 5: type, 6: message segment
 compiler.err.cant.apply.symbol=\
@@ -1419,6 +1423,12 @@ compiler.err.void.not.allowed.here=\
 # 0: string
 compiler.err.wrong.number.type.args=\
     wrong number of type arguments; required {0}
+
+compiler.err.superclass.constructor.might.not.have.been.invoked=\
+    superclass constructor might not have been invoked
+
+compiler.err.superclass.constructor.might.already.have.been.invoked=\
+    superclass constructor might already have been invoked
 
 # 0: symbol
 compiler.err.var.might.already.be.assigned=\
@@ -3748,8 +3758,8 @@ compiler.misc.canonical.must.not.declare.type.variables=\
 compiler.misc.type.must.be.identical.to.corresponding.record.component.type=\
     type and arity must match that of the corresponding record component\
 
-compiler.misc.canonical.must.not.contain.explicit.constructor.invocation=\
-    canonical constructor must not contain explicit constructor invocation
+compiler.misc.canonical.must.not.contain.explicit.constructor.invocations=\
+    canonical constructor must not contain explicit constructor invocations
 
 # 0: set of flag or string
 compiler.misc.canonical.must.not.have.stronger.access=\
@@ -3765,8 +3775,8 @@ compiler.err.invalid.supertype.record=\
     classes cannot directly extend {0}
 
 # 0: symbol
-compiler.err.first.statement.must.be.call.to.another.constructor=\
-    constructor is not canonical, so its first statement must invoke another constructor of class {0}
+compiler.err.non.canonical.constructor.invoke.other.constructors=\
+    constructor is not canonical, so it must invoke other constructors of class {0}
 
 compiler.err.instance.initializer.not.allowed.in.records=\
     instance initializers not allowed in records
