--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -230,8 +230,20 @@ compiler.err.switch.expression.no.result.expressions=\
     switch expression does not have any result expressions
 
 # 0: name
-compiler.err.call.must.be.first.stmt.in.ctor=\
-    call to {0} must be first statement in constructor
+compiler.err.call.must.only.appear.in.ctor=\
+    calls to {0}() may only appear within constructors
+
+# 0: name, 1: name
+compiler.err.redundant.superclass.init=\
+    redundant call to {0}() after {1}() has already been invoked
+
+# 0: name
+compiler.err.calls.not.allowed.here=\
+    calls to {0}() not allowed here
+
+# 0: name
+compiler.err.return.before.superclass.initialized=\
+    ''return'' not allowed prior to {0}()
 
 # 0: symbol kind, 1: name, 2: symbol kind, 3: type, 4: message segment
 compiler.err.cant.apply.symbol.noargs=\
@@ -376,7 +388,7 @@ compiler.err.annotation.decl.not.allowed.here=\
 compiler.err.cant.inherit.from.final=\
     cannot inherit from final {0}
 
-# 0: symbol or string
+# 0: symbol or name
 compiler.err.cant.ref.before.ctor.called=\
     cannot reference {0} before supertype constructor has been called
 
@@ -2737,19 +2749,19 @@ compiler.err.abstract.cant.be.accessed.directly=\
     abstract {0} {1} in {2} cannot be accessed directly
 
 ## The first argument ({0}) is a "kindname".
-# 0: symbol kind, 1: symbol
+# 0: kind name, 1: symbol
 compiler.err.non-static.cant.be.ref=\
     non-static {0} {1} cannot be referenced from a static context
 
-# 0: symbol kind, 1: symbol
+# 0: kind name, 1: symbol
 compiler.misc.bad.static.method.in.unbound.lookup=\
     unexpected static {0} {1} found in unbound lookup
 
-# 0: symbol kind, 1: symbol
+# 0: kind name, 1: symbol
 compiler.misc.bad.instance.method.in.unbound.lookup=\
     unexpected instance {0} {1} found in unbound lookup
 
-# 0: symbol kind, 1: symbol
+# 0: kind name, 1: symbol
 compiler.misc.bad.static.method.in.bound.lookup=\
     unexpected static {0} {1} found in bound lookup
 
@@ -3786,8 +3798,8 @@ compiler.err.invalid.supertype.record=\
     classes cannot directly extend {0}
 
 # 0: symbol
-compiler.err.first.statement.must.be.call.to.another.constructor=\
-    constructor is not canonical, so its first statement must invoke another constructor of class {0}
+compiler.err.non.canonical.constructor.invoke.another.constructor=\
+    constructor is not canonical, so it must invoke another constructor of class {0}
 
 compiler.err.instance.initializer.not.allowed.in.records=\
     instance initializers not allowed in records
