--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -2749,19 +2749,19 @@ compiler.err.abstract.cant.be.accessed.directly=\
     abstract {0} {1} in {2} cannot be accessed directly
 
 ## The first argument ({0}) is a "kindname".
-# 0: kind name, 1: symbol
+# 0: symbol kind, 1: symbol
 compiler.err.non-static.cant.be.ref=\
     non-static {0} {1} cannot be referenced from a static context
 
-# 0: kind name, 1: symbol
+# 0: symbol kind, 1: symbol
 compiler.misc.bad.static.method.in.unbound.lookup=\
     unexpected static {0} {1} found in unbound lookup
 
-# 0: kind name, 1: symbol
+# 0: symbol kind, 1: symbol
 compiler.misc.bad.instance.method.in.unbound.lookup=\
     unexpected instance {0} {1} found in unbound lookup
 
-# 0: kind name, 1: symbol
+# 0: symbol kind, 1: symbol
 compiler.misc.bad.static.method.in.bound.lookup=\
     unexpected static {0} {1} found in bound lookup
 
